--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -37,8 +37,8 @@
       <ion-item color="medium" lines="full">
 
         <ion-grid>
-          <ion-row>
-            <ion-col size="3">
+          <ion-row class="modalidade">
+            <ion-col  size="3">
                 <ion-chip color="warning">
                     <ion-label>{{product.modalidade}}</ion-label>
                   </ion-chip>
@@ -76,10 +76,10 @@
                 <ion-icon name="pin" color="danger"></ion-icon>
                 {{product.cities}}
               </p>
-            </ion-col>
-            <ion-col size="2">
+            </ion-col >
+            <ion-col class="produto" size="2">
               <ion-label class="icone">
-                <ion-icon name="arrow-round-forward" color="light"></ion-icon>
+                <ion-icon name="arrow-round-forward"  color="light"></ion-icon>
               </ion-label>
             </ion-col>
           </ion-row>
