--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -71,12 +71,14 @@ ion-row{
 ion-col .p{
     font-size: 0.5em;
     font-family: OpenSans-Regular;
+    
 }
 
 ion-col {
     font-size: 0.5em;
     font-family: OpenSans-Semibold;
-    align-self: center;
+    padding-left: 2px;
+    text-align: right;
 }
 
 ion-card{
@@ -84,6 +86,7 @@ ion-card{
     margin-bottom: 10px;
     padding-bottom: 0px;
     padding-top: 0px; 
+  
 
 }
 
@@ -93,14 +96,11 @@ ion-item{
     
 }
 
-
-.icone{
-    font-size: 32px;
-    text-align: right;
-}
-
 .produto{
-    font-family:OpenSans-Semibold;
-    font-size:0.6em;
+    text-align: left;
+
+    
 }
+
+
 
